--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -3,6 +3,75 @@
     flex-direction: column;
     margin: auto;
     margin-top: 200px;
+    width: 600px;
     background: #fff;
     padding-bottom: 30px;
+    border-radius: 8px;
+}
+
+.header{
+display: flex;
+flex-direction: column;
+align-items: center;
+gap: 9px;
+width: 100%;
+margin-top: 30px;
+}
+
+.text{
+    color: #2c3e50;
+    font-size: 48px;
+    font-weight: 700;
+}
+
+.underline{
+    width: 61px;
+    height: 3px;
+    background: #2c3e50;
+    border-radius: 9px;
+}
+
+.inputs{
+    margin-top: 55px;
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+
+input{
+    display: flex;
+    align-items: center;
+    margin: auto;
+    width: 480px;
+    height: 80px;
+    background: #F5F8FC;
+    border-radius: 6px;
+}
+
+.input input{
+    height: 50px;
+    width: 400px;
+    padding-left: 16px;
+    color: #f5f8fc;
+    font-size: 16px;
+}
+
+.submit-container{
+    display: flex;
+    gap: 30px;
+    margin: 60px auto;
+}
+
+.submit{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 220px;
+    height: 59px;
+    color: #fff;
+    background: #2c3e50;
+    border-radius: 32px;
+    font-size: 16px;
+    font-weight: 700px;
+    cursor: pointer;
 }
